[package]
name = "daswin"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.5"
x11 = {version = "2.20.0", features = [ "xlib" ]}
wgpu = "0.14.0" 
pollster = "0.2.5"
